# TPM

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.md up  SECURITY.md  init.cmd
.azuredevops/: cmake_build_win.yml
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: docker-check.yml  docker-publish.yml  giant-run-tests.yml  run-tests.yml  tpm-build-win.yml
TPMCmd/: CMakeLists.txt  Makefile.am  bootstrap  configure.ac
TPMCmd/Platform/: CMakeLists.txt
TPMCmd/Platform/include/: Platform.h  PlatformData.h
TPMCmd/Platform/src/: Clock.c  DebugHelpers.c  NVMem.c  PlatformPcr.c  RunCommand.c  VendorInfo.c
TPMCmd/Simulator/: CMakeLists.txt
TPMCmd/Simulator/include/: TpmTcpProtocol.h
TPMCmd/Simulator/src/: TPMCmdp.c  TcpServer.c  simulatorPrivate.h  simulator_sysheaders.h
TPMCmd/TpmConfiguration/TpmConfiguration/: TpmBuildSwitches.h
TPMCmd/tpm/: CMakeLists.txt
TPMCmd/tpm/cryptolibs/TpmBigNum/: BnConvert.c  BnMath.c  CMakeLists.txt  TpmBigNum.h
TPMCmd/tpm/cryptolibs/TpmBigNum/include/: BnSupport_Interface.h  BnValues.h  CMakeLists.txt
TPMCmd/tpm/cryptolibs/TpmBigNum/include/TpmBigNum/: TpmToTpmBigNumMath.h
docs/: .markdownlint.json
docs/BuildSystems/: Build.CMake.QuickStart.md  Build.CMake.md  Build.Linux.md  Build.OsX.md  Build.Windows.md  BuildIntro.md  CodeLayout.md  tpmBuildDependencies.drawio
docs/architecture/: Introduction.md  Library.Architecture.md  Tpm.BigNum.Library.md  Tpm.Crypto.Libraries.md  Tpm.Math.Library.md  Tpm.Platform.Api.md  tpmdiagram.drawio
scripts/: cmake_build.cmd  cmake_env.cmd  cmake_gen.cmd  cmake_onepass.cmd  cmake_parts.cmd  cmake_verify_build.cmd  detectEol.py  fast_cmake_parts.cmd  formatcode.sh  formatstaged.cmd  getossl.cmd  gitclean.cmd  init.cmd  putclangonpath.cmd  rtrimTree.py
scripts/nix/: cmake_build.sh  cmake_env.sh  cmake_gen.sh  cmake_onepass.sh  cmake_parts.sh  cmake_parts_runtests.sh  cmake_verify_build.sh  fast_cmake_parts.sh
scripts/win/: cmake_build.cmd  cmake_env.cmd  cmake_gen.cmd  cmake_onepass.cmd  cmake_parts.cmd  cmake_parts_runtests.cmd  fast_cmake_parts.cmd
testing/: expectations.json
(+198 files in other folders)
